# buildyartt

./: .gitmodules  CMakeLists.txt  README.md  RunTests.bat  dependency_versions.config
artifactory/: CMakeLists.txt
artifactory/gcc48/: CMakeLists.txt  artifact_aliases.config
artifactory/vc/: CMakeLists.txt  artifact_aliases.config
artifactory/vc110/: CMakeLists.txt  artifact_aliases.config
